# clue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pubspec.yaml
.github/workflows/: ci.yml  deploy.yml
apps/mobile/: .gitignore  README.md  pubspec.yaml
apps/mobile.v0/: README.md  pubspec.yaml
apps/mobile.v0/android/app/: build.gradle.kts
apps/mobile.v0/ios/Runner/: Info.plist
apps/mobile.v0/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile.v0/lib/: app.dart  config.dart  main.dart
apps/mobile.v0/lib/models/: app_user.dart  memory.dart  place.dart  session.dart
apps/mobile.v0/lib/services/: api_client.dart  auth_service.dart  pdr_service.dart  (+4 more)
apps/mobile.v0/test/: widget_test.dart
apps/mobile/lib/: main.dart
backend/: Cargo.toml
backend/migrations/: 0001_create_sessions.sql  0002_create_places_and_memories.sql  0003_places_boundary_and_cascade.sql  0004_timestamp_columns.sql  0005_memories_boundary.sql  0006_users_and_auth.sql
backend/src/: db.rs  main.rs
backend/src/routes/: auth.rs  community.rs  health.rs  memories.rs  mod.rs  places.rs  sessions.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: lib.rs
crates/localization/: Cargo.toml
crates/localization/src/: lib.rs
crates/mapping/: Cargo.toml
crates/mapping/src/: lib.rs
crates/pdr/: Cargo.toml
crates/pdr/src/: lib.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: lib.rs
docs/: AGENT.md  GOOGLE_SIGNIN_SETUP.md  PERSONAL_PLAN.md  PROJECT_AUDIT.md  roadmap.md  vision.md
scripts/: setup-tiles.sh
(+37 files in other folders)
