[workspace]
members = [
    "crates/sensors",
    "crates/pdr",
    "crates/fingerprint",
    "crates/mapping",
    "crates/localization",
    "backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
