[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sensors = { path = "../crates/sensors" }

# HTTP
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "json"] }

# Serialization
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Auth
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
bcrypt = "0.16"
